--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -4,7 +4,7 @@
     align-items: center;
     background-color: #333;
     padding: 10px 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    height: 2.5rem;
 }
 
 .header a {
@@ -24,8 +24,7 @@
 
 .header .search-container input {
     padding: 8px;
-    font-size: 16px;
-    border: 2px solid #ccc;
+    font-size: 14px;
     border-radius: 5px;
     width: 30%;
 }
@@ -33,4 +32,65 @@
 .header .header-icon {
     display: flex;
     align-items: center;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-button {
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+
+    right: 0;
+    background-color: #333;
+    border: 1px solid #555;
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    min-width: 150px;
+    padding: 10px;
+    z-index: 1000;
+}
+
+.dropdown-content p {
+    font-size: 0.5rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #fff;
+}
+
+.dropdown-content ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.dropdown-content ul li {
+    padding: 5px 10px;
+    border-radius: 4px;
+}
+
+.dropdown-content ul li a {
+    font-size: 1rem;
+    text-decoration: none;
+    color: #fff;
+    display: block;
+}
+
+.dropdown-content ul li:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
