--- a/assets/css/shopping_cart.css
+++ b/assets/css/shopping_cart.css
@@ -6,7 +6,7 @@
     gap: 20px;
 }
 
-.domain-card {
+.shopping-card {
     background: var(--background);
     padding: 20px;
     width: 90%;
@@ -15,7 +15,7 @@
     position: relative;
 }
 
-.domain-title {
+.shopping-title {
     font-size: 1.75rem;
     font-weight: bold;
     color: var(--foreground);
