--- a/assets/css/shopping_cart.css
+++ b/assets/css/shopping_cart.css
@@ -9,10 +9,32 @@
 .shopping-card {
     background: var(--background);
     padding: 20px;
-    width: 90%;
-    max-width: 500px;
+    width: 100%;
+    max-width: 800px;
     text-align: center;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    border-bottom: 3px solid transparent;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0) 100%);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 100% 3px;
+}
+
+
+.shopping-card-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.title-column {
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    margin-right: 20px;
 }
 
 .shopping-title {
@@ -21,6 +43,14 @@
     color: var(--foreground);
     margin-bottom: 15px;
     text-transform: uppercase;
+}
+
+.extensions-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+    flex-grow: 1;
 }
 
 .extensions {
@@ -78,4 +108,34 @@
     font-size: 1.5rem;
     color: var(--foreground);
     margin-top: 20px;
+}
+
+.price-list {
+    margin-left: 2rem;
+    margin-top: 20px;
+    font-size: 1rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.price-list h4 {
+    font-weight: bold;
+}
+
+.price-list ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+.price-list li {
+    margin-bottom: 5px;
+}
+
+.price-list p {
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin-top: 10px;
 }
