--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,17 +2,30 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: transparent;
     padding: 10px 20px;
-    height: 2.5rem;
+    height: 4rem;
+    color: var(--foreground);
+    position: relative;
+}
+
+.header::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.02) 50%, rgba(255, 255, 255, 0.1) 100%);
 }
 
 .header a {
     text-decoration: none;
-    color: #fff;
-    font-size: 24px;
+    color: var(--foreground);
+    font-size: 1.5rem;
     font-weight: bold;
     flex: 0 1 auto;
+    padding-left: 2rem;
 }
 
 .header .search-container {
@@ -20,6 +33,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 1rem;
+}
+.header .search-container button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    margin-left: 0.8rem;
+    margin-top: 0.8rem;
+}
+
+.header .search-container button i {
+    color: var(--foreground);
+    font-size: 1.2rem;
 }
 
 .header .search-container input {
@@ -27,6 +54,7 @@
     font-size: 14px;
     border-radius: 5px;
     width: 30%;
+
 }
 
 .header .header-icon {
@@ -37,6 +65,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    margin-right: 2rem;
 }
 
 .dropdown-button {
