--- a/assets/css/shopping_cart.css
+++ b/assets/css/shopping_cart.css
@@ -8,7 +8,7 @@
 
 .shopping-card {
     background: var(--background);
-    padding: 20px;
+    padding: .5rem;
     width: 100%;
     max-width: 800px;
     text-align: center;
@@ -22,7 +22,6 @@
     background-repeat: no-repeat;
     background-size: 100% 3px;
 }
-
 
 .shopping-card-top {
     display: flex;
