--- a/assets/css/domain_card.css
+++ b/assets/css/domain_card.css
@@ -1,41 +1,39 @@
 .domain-card {
     display: flex;
-    flex-direction: grid;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
     border-radius: 10px;
     background-color: black;
-    color: white;
+    color: var(--foreground);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 500px;
     height: 125px;
     margin-bottom: 1rem;
     margin-right: 1rem;
+    border: 1px solid var(--foreground);
 }
 
 .domain-title {
     font-size: 1.5rem;
     font-weight: 700;
-    margin-bottom: 10px;
-    margin-right: 50px;
     margin-left: 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .domain-information {
     display: flex;
-    align-items: right;
     flex-direction: column;
     font-size: 1.5rem;
     font-weight: 400;
-    margin-bottom: 10px;
     justify-content: flex-end;
     align-items: flex-end;
 }
 
 .domain-dropdown {
     background: transparent;
-    color: white;
+    color: var(--foreground);
     border: none;
     font-size: 24px;
     font-weight: bold;
@@ -45,4 +43,11 @@
 
 .domain-dropdown option {
     color: black;
+}
+
+.divider {
+    width: 2px;
+    height: 80%;
+    background: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
+    margin: 0 20px;
 }
